[gd_scene load_steps=6 format=3 uid="uid://0u5w258etlac"]

[ext_resource type="Script" uid="uid://dcs5ua5e3v2ya" path="res://src/components/notifications/PopupNotification.gd" id="1_nq0mh"]
[ext_resource type="Theme" uid="uid://co0lie1f8a4j0" path="res://src/themes/Clear.tres" id="1_oohft"]
[ext_resource type="Theme" uid="uid://c0s5t4a1qpvnu" path="res://src/themes/PopupPanelTheme.tres" id="2_5no74"]
[ext_resource type="PackedScene" uid="uid://bjbx05x3en3pk" path="res://src/effects/ScreenBlur.tscn" id="2_lpejl"]
[ext_resource type="Texture2D" uid="uid://81wpywexarbn" path="res://src/core/assets/icons/dino_sheet.png" id="2_x1vvm"]

[node name="PopupNotification" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_nq0mh")

[node name="ScreenBlur" parent="." instance=ExtResource("2_lpejl")]
unique_name_in_owner = true

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_oohft")

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Popup" type="PanelContainer" parent="PanelContainer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 500)
layout_mode = 2
theme = ExtResource("2_5no74")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer/Popup"]
layout_mode = 2
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/CenterContainer/Popup/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/CenterContainer/Popup/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HeaderIcon" type="TextureRect" parent="PanelContainer/CenterContainer/Popup/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("2_x1vvm")
stretch_mode = 4

[node name="MarginContainer4" type="MarginContainer" parent="PanelContainer/CenterContainer/Popup/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 2.08165e-12)
layout_mode = 2

[node name="HeaderLabel" type="RichTextLabel" parent="PanelContainer/CenterContainer/Popup/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(500, 2.08165e-12)
layout_mode = 2
theme = ExtResource("2_5no74")
theme_type_variation = &"RichHeaderLabel"
bbcode_enabled = true
text = "Powerup Collected"
fit_content = true
scroll_active = false

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/CenterContainer/Popup/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/CenterContainer/Popup/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BodyLabel" type="RichTextLabel" parent="PanelContainer/CenterContainer/Popup/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(640, 2.08165e-12)
layout_mode = 2
bbcode_enabled = true
text = "A very good description for this popup. A very good description for this popup. A very good description for this popup."
fit_content = true
scroll_active = false

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/CenterContainer/Popup/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 2
